# hcr

./: .gitignore  LICENSE  README.md
mcu/: mcu.ino
src/ekf/: CMakeLists.txt  package.xml
src/ekf/include/ekf/: ekf.h  ekf_node.h  scan_matcher.h  utils.h
src/ekf/launch/: ekf.launch
src/ekf/src/: ekf.cpp  ekf_node.cpp  scan_matcher.cpp  utils.cpp
src/joystick/: CMakeLists.txt  package.xml
src/joystick/include/joystick/: joystick.h
src/joystick/src/: joystick.cpp  joystick_node.cpp
src/mobility/: CMakeLists.txt  package.xml
src/mobility/configuration_files/: robot.lua
src/mobility/launch/: camera.launch  cartographer.launch  joystick.launch  sensors_data_collection.launch
src/motion_controller/: CMakeLists.txt  package.xml
src/motion_controller/src/: motion_controller_node.cpp
src/motion_controller_msgs/: CMakeLists.txt  package.xml
src/motion_controller_msgs/msg/: SafetyBump.msg  SafetyToF.msg  WheelEncoders.msg
src/obstacle_detection/: CMakeLists.txt  package.xml
src/obstacle_detection/include/obstacle_detection/: obstacle_detection_node.h  utils.h
src/obstacle_detection/launch/: obstacle_detection.launch
src/obstacle_detection/rviz/: obstacle_detection.rviz
src/obstacle_detection/src/: obstacle_detection_node.cpp  utils.cpp
src/odometry_publisher/: CMakeLists.txt  package.xml
src/odometry_publisher/src/: odometry_publisher_node.cpp
src/realsense2_camera/launch/: rs_camera.launch
src/robot_config/: CMakeLists.txt  package.xml
src/robot_config/include/robot_config/: robot_config.h
src/robot_intrinsics_publisher/: CMakeLists.txt  package.xml
src/robot_intrinsics_publisher/src/: robot_intrinsics_publisher.cpp
src/semantic_segmentation/: CMakeLists.txt  package.xml
src/semantic_segmentation/src/: semantic_segmentation_node.py
