<?xml version="1.0"?>
<package format="2">
  <name>ekf</name>
  <version>0.0.0</version>
  <description>The ekf package</description>

  <maintainer email="mohitd2000@gmail.com">Mohit</maintainer>
  <license>MIT</license>

  <depend>catkin</depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>motion_controller_msgs</depend>
  <depend>robot_config</depend>
  <depend>laser_geometry</depend>

</package>
