<?xml version="1.0"?>
<package format="2">
  <name>motion_controller_msgs</name>
  <version>0.0.0</version>
  <description>The motion_controller_msgs package</description>
  <maintainer email="mohitd2000@gmail.com">Mohit</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>message_generation</depend>

</package>
