<?xml version="1.0"?>
<package format="2">
  <name>obstacle_detection</name>
  <version>0.0.0</version>
  <description>The obstacle_detection package</description>

  <maintainer email="mohit@todo.todo">mohit</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>laser_geometry</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>
