<?xml version="1.0"?>
<package format="2">
    <name>odometry_publisher</name>
    <version>0.0.0</version>
    <description>The odometry_publisher package</description>

    <maintainer email="mohitd2000@gmail.com">Mohit</maintainer>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>nav_msgs</depend>
    <depend>motion_controller_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>robot_config</depend>
</package>
