<?xml version="1.0"?>
<package format="2">
  <name>robot_config</name>
  <version>0.0.0</version>
  <description>The robot_config package</description>

  <maintainer email="mohitd2000@gmail.com">Mohit</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

</package>
