<?xml version="1.0"?>
<package format="2">
  <name>robot_intrinsics_publisher</name>
  <version>0.0.0</version>
  <description>The robot_intrinsics_publisher package</description>

  <maintainer email="mohitd2000@gmail.com">Mohit</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>
