<?xml version="1.0"?>
<package format="2">
  <name>semantic_segmentation</name>
  <version>0.0.0</version>
  <description>The semantic_segmentation package</description>

  <maintainer email="mohitd2000@gmail.com">Mohit</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>

</package>
